--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,7 +23,7 @@
             href="%PUBLIC_URL%/safari-pinned-tab.svg"
             color="#5bbad5"
     />
-    <meta name="description" content="Charcot - A self-service application for ordering brain slide images" />
+    <meta name="description" content="Charcot - A self-service application for requesting brain slide images" />
     <meta name="theme-color" content="#ffffff" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -52,7 +52,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Charcot - A self-service application for ordering brain slide images</title>
+    <title>Charcot - A self-service application for requesting brain slide images</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
